# anki-voice

./: .gitignore  API_ENDPOINT_SPECIFICATION_EXAMPLE.md  BUG_REPORT_GRADE_BUTTON_DOUBLE_TAP.md  BUG_REPORT_SERVER_CONNECTION_REFUSED.md  FEATURE_REQUEST_LOCAL_AI_TTS.md  FEATURE_REQUEST_SHOW_ANSWER_DURING_READ.md  FEATURE_REQUEST_UI_IMPROVEMENTS.md  FOR_DEV.md  OUTPUT  README.md  SERVER_SETUP_GUIDE.md  TTS_IMPLEMENTATION_CODE_REFERENCE.md  XCODE_CONFIGURATION_STEPS.md  debug_grading.py  fix_mic_permissionkit.rb  fix_mpk_build.rb  fix_mpk_header_search.rb  remove_info_plist_from_resources.rb  repair_mic_permissionkit_paths.rb  setup-macos.sh  setup-venv.sh  setup.sh  setup_mic_permissionkit.rb  test-backend.sh  test-ios-setup.sh  test_grade.json  test_meta_instruction.json  test_openai.py  test_partial_answer.json  test_wrong_answer.json  verify_mic_permissionkit.rb
anki-deck-update/: README.md  anki_voice_lang_setup.py
anki-voice-bridge/: README.md  __init__.py
anki-voice-ios/: README.md
anki-voice-ios/AnkiVoice/AnkiVoice/: AnkiVoice.Debug.entitlements  AnkiVoice.Release.entitlements  AnkiVoice.entitlements  AnkiVoiceApp.swift  AudioDirector.swift  AudioSession.swift  AuthService.swift  AuthSheet.swift  (+8 more)
anki-voice-ios/AnkiVoice/AnkiVoice.xcodeproj/: project.pbxproj
anki-voice-ios/AnkiVoiceTests/: IntentParserTests.swift
anki-voice-server/: Makefile  README.md  activate.sh  dev.jeet.ankivoice.plist  pyproject.toml  requirements.txt  start-anki-voice.sh
anki-voice-server/app/: __init__.py  ankiconnect.py  judge.py  main.py  normalize.py  openai_client.py
(+13 files in other folders)
